[gd_scene load_steps=8 format=3 uid="uid://dr5fi8xiplmp1"]

[ext_resource type="Script" uid="uid://bouvtcriiww3f" path="res://scripts/ui/main_menu.gd" id="1_5d7f2"]
[ext_resource type="Texture2D" uid="uid://tp4dyu6o6xkb" path="res://assets/art/environment/forest.jpg" id="2_fe2o3"]
[ext_resource type="FontFile" uid="uid://cofv808qgpv2h" path="res://assets/fonts/Silkscreen-Regular.ttf" id="3_m1kxf"]
[ext_resource type="Texture2D" uid="uid://o1ia5yf04egs" path="res://assets/art/ui/scrollsandblocks.png" id="4_x2yvf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uhagc"]
atlas = ExtResource("4_x2yvf")
region = Rect2(0, 64, 96, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btxxm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1kxf"]
bg_color = Color(0.28235295, 0.30588236, 0.18431373, 0.5882353)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5176471, 0.5568628, 0.36862746, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5d7f2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fe2o3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -44.0
offset_right = 76.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_uhagc")

[node name="StartButton" type="Button" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.04687342, 0.042177916, 0.03812677, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.24313726, 0.24313726, 0.24313726, 1)
theme_override_colors/icon_hover_color = Color(1.0868737, 1.1638972, 1.0868737, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_m1kxf")
theme_override_font_sizes/font_size = 20
text = "INICIAR
"
flat = true
icon_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_btxxm")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2
texture = SubResource("AtlasTexture_uhagc")

[node name="QuitButton" type="Button" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.047058824, 0.043137256, 0.039215688, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.24477637, 0.2447764, 0.24477637, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(1.0868737, 1.1638972, 1.0868737, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_m1kxf")
theme_override_font_sizes/font_size = 20
text = "SALIR
"
flat = true
icon_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -316.0
offset_top = 130.0
offset_right = 322.0
offset_bottom = 195.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m1kxf")

[node name="Title" type="Label" parent="PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2509804, 1, 0.4627451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.972549)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_m1kxf")
theme_override_font_sizes/font_size = 40
text = "FOREST'S 
LAST STAND"
horizontal_alignment = 1
vertical_alignment = 1
